--- a/ShoesShop/Views/AddShoesPage.xaml
+++ b/ShoesShop/Views/AddShoesPage.xaml
@@ -12,6 +12,7 @@
         <helpers:PrefixConverter x:Key="PrefixConverter" />
         <helpers:StringToBitmapImageConverter x:Key="StringToBitmapImageConverter" />
         <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <helpers:DecimalToDoubleConverter x:Key="DecimalToDoubleConverter" />
 
         <Style x:Key="TitleText" TargetType="TextBlock">
             <Setter Property="VerticalAlignment" Value="Center" />
@@ -70,9 +71,10 @@
                     <TextBox Header="Brand Name" PlaceholderText="Enter Brand" Text="{x:Bind ViewModel.NewShoes.Brand, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" />
                     <TextBox Header="Size" PlaceholderText="Enter Size" Text="{x:Bind ViewModel.NewShoes.Size, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" />
                     <TextBox Header="Color" PlaceholderText="Enter Color" Text="{x:Bind ViewModel.NewShoes.Color, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" />
-                    <TextBox Header="Stock Quantity" PlaceholderText="Enter Stock" Text="{x:Bind ViewModel.NewShoes.Stock, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
-                    <TextBox Header="Cost Price" PlaceholderText="Enter zip code" Text="{x:Bind ViewModel.NewShoes.Cost, Mode=TwoWay}" Grid.Column="0" Grid.Row="2"/>
-                    <TextBox Header="Selling Price" PlaceholderText="Enter country" Text="{x:Bind ViewModel.NewShoes.Price, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"/>
+                    <NumberBox Header="Stock Quantity" PlaceholderText="Enter Stock" Value="{x:Bind ViewModel.NewShoes.Stock, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
+                    <NumberBox Header="Cost Price" PlaceholderText="Cost Price" Value="{x:Bind ViewModel.NewShoes.Cost, Mode=TwoWay, Converter={StaticResource DecimalToDoubleConverter}}" Grid.Column="0" Grid.Row="2"/>
+                    <NumberBox Header="Selling Price" PlaceholderText="Selling Price" Value="{x:Bind ViewModel.NewShoes.Price, Mode=TwoWay, Converter={StaticResource DecimalToDoubleConverter}}" Grid.Column="1" Grid.Row="2"/>
+
                 </Grid>
             </StackPanel>
 
