--- a/ShoesShop/Views/DashboardPage.xaml
+++ b/ShoesShop/Views/DashboardPage.xaml
@@ -108,7 +108,7 @@
                                 <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
                                     <FontIcon Glyph="&#xE719;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                                 </Border>
-                                <TextBlock Text="{x:Bind ViewModel.TotalOrders, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Bind ViewModel.TotalOrders, Mode=OneWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -119,7 +119,7 @@
                                 <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
                                     <FontIcon Glyph="&#xE7BF;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                                 </Border>
-                                <TextBlock Text="{x:Bind ViewModel.TotalShoesInStock, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Bind ViewModel.TotalShoesInStock, Mode=OneWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -130,7 +130,7 @@
                                 <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
                                     <FontIcon Glyph="&#xE752;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                                 </Border>
-                                <TextBlock Text="{x:Bind ViewModel.TotalRevenue, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Bind ViewModel.TotalRevenue, Converter={StaticResource CurrencyConverter}, Mode=OneWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
