--- a/ShoesShop/Views/AddShoesPage.xaml
+++ b/ShoesShop/Views/AddShoesPage.xaml
@@ -98,14 +98,15 @@
                 Style="{StaticResource ButtonSize}" 
                 Command="{x:Bind ViewModel.CancelButtonCommand}" />
                 </StackPanel>
+                <!-- Loading Indicator -->
+                <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <ProgressRing IsActive="True" Width="30" Height="30" />
+                    </StackPanel>
+                </Grid>
             </StackPanel>
 
-            <!-- Loading Indicator -->
-            <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <ProgressRing IsActive="True" MinWidth="100" MinHeight="100" />
-                </StackPanel>
-            </Grid>
+
 
         </Grid>
     </ScrollViewer>
