--- a/ShoesShop/Views/ShoesPage.xaml
+++ b/ShoesShop/Views/ShoesPage.xaml
@@ -60,17 +60,17 @@
                         <TextBlock Text="Total Shoes:" FontWeight="Medium" FontSize="16"/>
                         <StackPanel Orientation="Horizontal">
                             <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
-                                <FontIcon Glyph="&#xEE57;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                <FontIcon Glyph="&#xE7BF;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                             </Border>
                             <TextBlock Text="{x:Bind ViewModel.TotalItems, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                         </StackPanel>
                     </StackPanel>
 
                     <StackPanel Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="15" Spacing="10">
-                        <TextBlock Text="Inactive Users:" FontWeight="Medium" FontSize="16"/>
+                        <TextBlock Text="Inactive Shoes:" FontWeight="Medium" FontSize="16"/>
                         <StackPanel Orientation="Horizontal">
                             <Border Background="#FFA52F" Padding="5" CornerRadius="5" Margin="0 0 25 0">
-                                <FontIcon Glyph="&#xEB90;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                <FontIcon Glyph="&#xE823;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                             </Border>
                             <TextBlock Text="{x:Bind ViewModel.InactiveShoes, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                         </StackPanel>
@@ -81,8 +81,8 @@
                             VerticalAlignment="Stretch" Command="{x:Bind ViewModel.NavigateToAddShoesPageCommand}">
                         <StackPanel>
                             <StackPanel Orientation="Horizontal">
-                                <Border Background="Transparent" Padding="5" CornerRadius="5" Margin="0 0 10 0" VerticalAlignment="Center">
-                                    <FontIcon Glyph="&#xECC8;" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                <Border Background="Transparent" Padding="5" CornerRadius="5" Margin="0 0 25 0" VerticalAlignment="Center">
+                                    <FontIcon Glyph="&#xECC8;" FontSize="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                 </Border>
                                 <TextBlock Text="Add New Shoes" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                             </StackPanel>
