--- a/ShoesShop/Views/UserDetailPage.xaml
+++ b/ShoesShop/Views/UserDetailPage.xaml
@@ -109,12 +109,12 @@
                     Style="{StaticResource ButtonSize}" 
                     Command="{x:Bind ViewModel.ChangePasswordCommand}" />
                 </StackPanel>
+                <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsEditLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <ProgressRing IsActive="True" Width="30" Height="30" />
+                    </StackPanel>
+                </Grid>
             </StackPanel>
-            <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsEditLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <ProgressRing IsActive="True" MinWidth="100" MinHeight="100" />
-                </StackPanel>
-            </Grid>
         </Grid>
     </ScrollViewer>
 </Page>
